{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 77,
  "lineage": "f54f6603-de87-8892-a10d-3bb942176fd1",
  "resources": [
    {
      "module": "module.iac_04_module",
      "mode": "data",
      "type": "aws_subnet",
      "name": "subnet_a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:709308406413:subnet/subnet-33736d7a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "172.31.32.0/20",
            "default_for_az": true,
            "id": "subnet-33736d7a",
            "map_public_ip_on_launch": true,
            "owner_id": "709308406413",
            "state": "available",
            "vpc_id": "vpc-81383de6"
          }
        }
      ]
    },
    {
      "module": "module.iac_04_module",
      "mode": "data",
      "type": "aws_subnet",
      "name": "subnet_b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:709308406413:subnet/subnet-e722cf81",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "172.31.0.0/20",
            "default_for_az": true,
            "id": "subnet-e722cf81",
            "map_public_ip_on_launch": true,
            "owner_id": "709308406413",
            "state": "available",
            "vpc_id": "vpc-81383de6"
          }
        }
      ]
    },
    {
      "module": "module.iac_04_module",
      "mode": "data",
      "type": "aws_subnet",
      "name": "subnet_c",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:709308406413:subnet/subnet-082db150",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2c",
            "availability_zone_id": "apse2-az2",
            "cidr_block": "172.31.16.0/20",
            "default_for_az": true,
            "id": "subnet-082db150",
            "map_public_ip_on_launch": true,
            "owner_id": "709308406413",
            "state": "available",
            "vpc_id": "vpc-81383de6"
          }
        }
      ]
    },
    {
      "module": "module.iac_04_module",
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:709308406413:vpc/vpc-81383de6",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-d822c4b3",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-1bfdda7c",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-81383de6",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-e861ee8e",
            "owner_id": "709308406413",
            "state": "available"
          }
        }
      ]
    },
    {
      "module": "module.iac_04_module",
      "mode": "managed",
      "type": "aws_elb",
      "name": "elb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:709308406413:loadbalancer/elb",
            "availability_zones": [
              "ap-southeast-2a",
              "ap-southeast-2b",
              "ap-southeast-2c"
            ],
            "connection_draining": false,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": true,
            "dns_name": "elb-577733295.ap-southeast-2.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 30,
                "target": "HTTP:80/",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "elb",
            "idle_timeout": 60,
            "internal": false,
            "listener": [
              {
                "instance_port": 80,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "elb",
            "security_groups": [
              "sg-096669ab1dbd08acb"
            ],
            "source_security_group": "709308406413/sec_alb",
            "source_security_group_id": "sg-096669ab1dbd08acb",
            "subnets": [
              "subnet-082db150",
              "subnet-33736d7a",
              "subnet-e722cf81"
            ],
            "zone_id": "Z1GM3OXH4ZPM65"
          },
          "dependencies": [
            "module.iac_04_module.aws_security_group.sec_alb"
          ]
        }
      ]
    },
    {
      "module": "module.iac_04_module",
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:709308406413:loadbalancer/app/alb/e580db543fd1699e",
            "arn_suffix": "app/alb/e580db543fd1699e",
            "dns_name": "alb-164351631.ap-southeast-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:709308406413:loadbalancer/app/alb/e580db543fd1699e",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "alb",
            "security_groups": [
              "sg-096669ab1dbd08acb"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-082db150"
              },
              {
                "subnet_id": "subnet-33736d7a"
              },
              {
                "subnet_id": "subnet-e722cf81"
              }
            ],
            "subnets": [
              "subnet-082db150",
              "subnet-33736d7a",
              "subnet-e722cf81"
            ],
            "tags": {
              "Name": "alb"
            },
            "vpc_id": "vpc-81383de6",
            "zone_id": "Z1GM3OXH4ZPM65"
          },
          "dependencies": [
            "module.iac_04_module.aws_security_group.sec_alb"
          ]
        }
      ]
    },
    {
      "module": "module.iac_04_module",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "alb_listener",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:709308406413:listener/app/alb/e580db543fd1699e/8f1b46a9bfc156a6",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:709308406413:targetgroup/alb-target-group/e2a58080356c9572",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:709308406413:listener/app/alb/e580db543fd1699e/8f1b46a9bfc156a6",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:709308406413:loadbalancer/app/alb/e580db543fd1699e",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "module.iac_04_module.aws_lb.alb",
            "module.iac_04_module.aws_lb_target_group.alb_target_group",
            "module.iac_04_module.aws_security_group.sec_alb"
          ]
        }
      ]
    },
    {
      "module": "module.iac_04_module",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "alb_target_group",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:709308406413:targetgroup/alb-target-group/e2a58080356c9572",
            "arn_suffix": "targetgroup/alb-target-group/e2a58080356c9572",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 10,
                "matcher": "200",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 10
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:709308406413:targetgroup/alb-target-group/e2a58080356c9572",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "alb-target-group",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 1800,
                "enabled": true,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "name": "alb_target_group"
            },
            "target_type": "instance",
            "vpc_id": "vpc-81383de6"
          }
        }
      ]
    },
    {
      "module": "module.iac_04_module",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sec_alb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:709308406413:security-group/sg-096669ab1dbd08acb",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-096669ab1dbd08acb",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "sec_alb",
            "name_prefix": null,
            "owner_id": "709308406413",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-81383de6"
          }
        }
      ]
    },
    {
      "module": "module.iac_04_module",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sec_web",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:709308406413:security-group/sg-04d6d873133f5348a",
            "description": "Used for autoscale group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04d6d873133f5348a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "sec_web",
            "name_prefix": null,
            "owner_id": "709308406413",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-81383de6"
          }
        }
      ]
    }
  ]
}